# dark-software-factory

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  mkdocs.yml  pyproject.toml
cli/: pyproject.toml
cli/src/dsf/cli/: __init__.py  charter.py  factory.py
cli/src/dsf/instance/: __init__.py  app_bootstrap.py  bootstrap_issue.py  branch_protection.py  deploy_progress.py  deprovisioner.py  github_identity.py  issue_count.py  provisioner.py  runtime_index.py  runtime_render.py  spec.py  squad_governance.py  squad_render.py  tagging.py  teardown_common.py
cli/tests/: test_recording_repo_client.py
cli/tests/cli/: test_charter.py  test_control.py  test_factory.py  test_factory_list.py  test_factory_runtime.py
cli/tests/instance/: test_app_bootstrap.py  test_bootstrap_issue.py  test_branch_protection.py  test_deploy_progress.py  test_deprovisioner.py  test_github_identity.py  test_issue_count.py  test_offboard.py  test_owner_appconfig_bootstrap.py  test_provisioner.py  test_runtime_index.py  test_runtime_render.py  test_spec.py  test_squad_governance.py  test_squad_render.py  test_tagging.py  test_teardown_common.py
config/: defaults.json  (+1 more)
control-center/: pyproject.toml
control-center/src/dsf/control_center/: app.py
control-center/src/dsf/control_center/static/: app.css
control-center/src/dsf/control_center/templates/: index.html
control-center/tests/control_center/: test_app.py
core/: pyproject.toml
core/src/dsf/: container.py  github_app_client.py
core/src/dsf/a2a/: auth.py  server.py
core/src/dsf/charter/: __init__.py  amendment.py  constitution.py  context.py  cosmos_store.py  interview.py  markdown.py  sync.py
core/src/dsf/config/: __init__.py  azure_store.py  flags.py  owner_index.py  registry.py  store.py
core/src/dsf/contracts/: __init__.py  charter.py  enums.py  export_schema.py  handoff.py  models.py
core/src/dsf/contracts/schemas/: CouncilVerdict.json  CriticScore.json  EvidenceItem.json  Proposal.json
core/src/dsf/learning/: __init__.py  lessons.py
core/src/dsf/memory/: __init__.py  azure_store.py  consolidation.py  dedup.py  store.py
core/src/dsf/model/: __init__.py  azure_client.py  azure_embeddings.py  client.py
core/src/dsf/observability/: tracing.py
core/src/dsf/ports/: __init__.py
core/src/dsf/signals/: __init__.py  buffer.py
core/tests/: test_container.py  test_container_builders.py  test_github_app_client.py
core/tests/a2a/: test_client.py  test_server.py
core/tests/charter/: test_amendment.py  test_charter_store.py  test_constitution.py  test_context.py  test_contracts.py  test_cosmos_store.py  test_interview.py  test_markdown.py  test_sync.py
core/tests/config/: test_azure_store.py  test_flags.py  test_owner_index.py  test_product_record.py  test_registry.py  test_store.py
core/tests/contracts/: test_handoff.py  test_models.py
core/tests/learning/: test_calibration.py  test_feedback_watcher.py  test_handoff_loop.py
core/tests/memory/: test_azure_store.py  test_cosmos_aclose.py  test_memory.py  test_semantic_dedup.py  test_store.py
core/tests/model/: test_azure_client.py  test_azure_embeddings.py  test_client.py
core/tests/observability/: test_dashboard.py  test_tracing.py
core/tests/signals/: test_buffer.py
feature-council/: pyproject.toml
feature-council/src/dsf/agents/: base.py  mode.py  registry.py
feature-council/src/dsf/agents/azuremonitor/: __init__.py  backend.py  client.py  main.py
feature-council/src/dsf/agents/foundryiq/: Dockerfile  README.md  __init__.py  backend.py  client.py
feature-council/src/dsf/agents/grafana/: Dockerfile  README.md  backend.py  client.py
feature-council/src/dsf/agents/incidents/: __init__.py  backend.py  client.py  main.py
feature-council/src/dsf/agents/sentry/: Dockerfile  README.md  backend.py  main.py  mcp_client.py
feature-council/src/dsf/council/: __init__.py  charter_context.py  decision.py  deliberation.py  jury.py  outcome.py  scope.py  synthesizer.py
feature-council/src/dsf/evals/: __init__.py  runner.py
feature-council/src/dsf/orchestrator/: agent_registry.py  blackboard.py
feature-council/src/dsf/runtime/: Dockerfile  README.md  __init__.py  control.py
feature-council/src/dsf/triggers/: __init__.py  app.py  charter_amend.py  charter_sync.py  debounce.py  ingestion.py  scheduler.py
feature-council/tests/: test_integration_issues.py
feature-council/tests/agents/: test_base.py  test_registry.py  test_tickets.py
feature-council/tests/agents/azuremonitor/: test_azuremonitor.py  test_azuremonitor_live.py
feature-council/tests/agents/foundryiq/: test_foundryiq.py  test_foundryiq_live.py
feature-council/tests/agents/grafana/: test_grafana.py
feature-council/tests/agents/incidents/: test_incidents.py  test_incidents_live.py
feature-council/tests/agents/sentry/: test_sentry_live.py  test_sentry_mcp.py
feature-council/tests/agents/webiq/: test_webiq_foundry.py  test_webiq_live.py  test_webiq_sdk.py
feature-council/tests/council/: test_charter_context.py  test_charter_lenses.py  test_critics.py  test_decision.py  test_deliberation.py  test_jury.py  test_outcome.py  test_scope.py  test_synthesizer.py
feature-council/tests/e2e/: test_dry_run_line.py  test_operational_line.py
feature-council/tests/evals/: test_runner.py
feature-council/tests/orchestrator/: test_blackboard.py  test_conveyor.py  test_s1_charter.py  test_s2_investigation.py  test_s3_charter.py  test_s5_escalation.py  test_s6_routing.py  test_s7_filing.py
feature-council/tests/runtime/: test_control_product.py  test_runtime_image.py  test_serve_orchestrator_loop.py
feature-council/tests/triggers/: test_app.py  test_charter_amend.py  test_charter_sync.py  test_debounce.py  test_ingestion.py  test_scheduler.py
(+333 files in other folders)
