[project]
name = "dsf"
version = "0.1.0"
description = "Dark Software Factory — automated feature-intake line"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "jinja2>=3.1",
    "jsonschema>=4.21",
    "mcp>=1.2",
]

[project.scripts]
dsf = "dsf.cli.factory:main"
dsfctl = "dsf.cli.control:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
azure = [
    "azure-appconfiguration>=1.5",
    "azure-cosmos>=4.5",
    "azure-identity>=1.15",
    "openai>=1.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dsf"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
