[project]
name = "dsf"
version = "0.1.0"
description = "Dark Software Factory — legacy umbrella (control_center; being split into workspace members under #26)"
requires-python = ">=3.12"
dependencies = [
    "dsf-core",
    "fastapi>=0.110",
    "jinja2>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dsf"]

[tool.uv.workspace]
members = ["core", "feature-council", "cli"]

[tool.uv.sources]
dsf-core = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["dsf"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
