[project]
name = "dsf-cli"
version = "0.1.0"
description = "Dark Software Factory — factory CLI and instance provisioning (dsf new)"
requires-python = ">=3.12"
dependencies = [
    "dsf-core",
]

[project.scripts]
dsf = "dsf.cli.factory:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dsf"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["dsf", "dsf_testing"]
