[project]
name = "dsf-control-center"
version = "0.1.0"
description = "Dark Software Factory — Control Center web UI (runtime governance surface)"
requires-python = ">=3.12"
dependencies = [
    "dsf-core",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
]

[project.scripts]
dsf-control-center = "dsf.control_center.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dsf"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["dsf", "dsf_testing"]
