[project]
name = "dsf-core"
version = "0.1.0"
description = "Dark Software Factory — shared core (contracts, ports, config, memory, model, observability, a2a, container, learning)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "fastapi>=0.110",
    "pyjwt[crypto]>=2.8",
]

[project.optional-dependencies]
azure = [
    "azure-appconfiguration>=1.5",
    "azure-cosmos>=4.5",
    "azure-identity>=1.15",
    "openai>=1.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dsf"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["dsf", "dsf_testing"]
