[project]
name = "dsf-feature-council"
version = "0.1.0"
description = "Dark Software Factory — feature council runtime (agents, council, orchestrator, triggers, evals, runtime)"
requires-python = ">=3.12"
dependencies = [
    "dsf-core[azure]",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "mcp>=1.2",
    "webiq>=0.1.0",
]

[project.scripts]
dsfctl = "dsf.runtime.control:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dsf"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["dsf", "dsf_testing"]
